--- a/_src/templates/partials/_main.html
+++ b/_src/templates/partials/_main.html
@@ -1,1 +1,10 @@
-<main class="page__main">@@label</main>
+<main class="page__main">
+
+  <label for="search"></label>
+  <input id="search" type="text" class="main__input">
+  <button class="main__button">Buscar</button>
+  <div class="main__container">Aqui va la lista</div>
+
+</main>
+
+
