--- a/_src/templates/index.html
+++ b/_src/templates/index.html
@@ -2,16 +2,16 @@
 <html lang="es">
 <head>
 	<meta charset="UTF-8">
-	<title>Adalab Web Starter Kit</title>
+	<title>Final exam - Mod. 2 Constanza Sosa</title>
   <link rel="icon" href="favicon.png"/>
+  <meta name="viewport" content="width=device-width, user-scalable=no">
 	<link rel="stylesheet" href="assets/css/main.css">
 </head>
-<body>
+<body class="app">
   <div class="page">
     <partial src="_header.html" label="Header"></partial>
     <partial src="_main.html" label="Main"></partial>
-    <partial src="_link.html" aClass="link__adalab" text="Adalab" url="https://adalab.es"></partial>
-    <partial src="_link.html" aClass="link__github" text="GitHub" url="https://github.com"></partial>
+    <script src="assets/js/main.js"></script>
   </div>
 </body>
 </html>
