--- a/_src/templates/partials/_header.html
+++ b/_src/templates/partials/_header.html
@@ -1,1 +1,5 @@
-<header class="page__header">@@label</header>
+<header class="page__header">
+
+  <h1 class="header__title">Buscador de Series:</h1>
+
+</header>
