Add listeners to all lis and function that change classes

--- a/_src/templates/partials/_main.html
+++ b/_src/templates/partials/_main.html
@@ -3,7 +3,7 @@
   <label for="search"></label>
   <input id="search" type="text" class="main__input">
   <button class="main__button">Buscar</button>
-  <div class="main__container">Aqui va la lista</div>
+  <div class="main__container"></div>
 
 </main>
 
