--- a/_src/assets/scss/main.scss
+++ b/_src/assets/scss/main.scss
@@ -11,6 +11,41 @@
 // .page__main { }
 // .main__input { }
 // .main__button { }
+
 .main__container {
+
+}
+.show__list{
+  list-style: none;
+  padding: 0;
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.show__list-item{
   background-color: pink;
+  height: 400px;
+  width: 250px;
+  box-sizing: border-box;
+  margin: 10px;
+  padding: 10px;
+  display: inline-block;
+
+}
+
+.show__list-container{
+  text-align: center;
+}
+
+.show__list-title{
+  color: red;
+}
+
+.show__fav{
+  background-color: red;
+
+  .show__list-title {
+    color: pink;
+  }
+
 }
