--- a/_src/templates/partials/_main.html
+++ b/_src/templates/partials/_main.html
@@ -3,8 +3,10 @@
   <label for="search"></label>
   <input id="search" type="text" class="main__input">
   <button class="main__button">Buscar</button>
-  <div class="fav__container"></div>
-  <div class="main__container"></div>
+  <div class="main__container">
+    <div class="fav__container"></div>
+    <div class="list__container"></div>
+  </div>
 </main>
 
 
