Add some styling

--- a/_src/templates/index.html
+++ b/_src/templates/index.html
@@ -5,6 +5,7 @@
 	<title>Final exam - Mod. 2 Constanza Sosa</title>
   <link rel="icon" href="favicon.png"/>
   <meta name="viewport" content="width=device-width, user-scalable=no">
+  <link href="https://fonts.googleapis.com/css?family=Luckiest+Guy&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="assets/css/main.css">
 </head>
 <body class="app">
