--- a/_src/templates/partials/_main.html
+++ b/_src/templates/partials/_main.html
@@ -1,8 +1,10 @@
 <main class="page__main">
 
+  <form class="form" action="get" method="get">
   <label for="search"></label>
-  <input id="search" type="text" class="main__input">
-  <button class="main__button">Buscar</button>
+  <input id="search" type="text" class="main__input" placeholder="¡Busca tu serie!">
+  <button type="button" class="main__button">Buscar</button>
+  </form>
   <div class="main__container">
     <div class="fav__container"></div>
     <div class="list__container"></div>
