--- a/_src/assets/scss/main.scss
+++ b/_src/assets/scss/main.scss
@@ -4,13 +4,42 @@
 .app {
 	background:$color-white;
 	margin: 0;
-	height: 100vh;
+  height: 100vh;
 }
 
-// .header__title { }
-// .page__main { }
-// .main__input { }
+.page{
+  box-sizing: border-box;
+  padding: 10px;
+  height: 100%;
+}
+
+
+.header__title{
+  font-family: 'Luckiest Guy', cursive;
+}
+
+.page__main {
+  background-color: antiquewhite;
+  min-height: 100vh;
+  box-sizing: border-box;
+  padding: 10px;
+}
+
+.main__input {
+  width: 200px;
+  height: 30px;
+  margin: 0 10px;
+  ::placeholder{
+    color: grey;
+    font-size:30px;
+  }
+}
 // .main__button { }
+
+.form{
+  display: flex;
+
+}
 
 .main__container {
   display: flex;
@@ -24,7 +53,7 @@
 }
 
 .show__list-item{
-  background-color: pink;
+  background-color: whitesmoke;
   height: 400px;
   width: 250px;
   box-sizing: border-box;
@@ -39,14 +68,49 @@
 }
 
 .show__list-title{
-  color: red;
+  color: darkgrey;
 }
 
 .show__fav{
-  background-color: red;
+  background-color: darkgrey;
 
   .show__list-title {
-    color: pink;
+    color: whitesmoke;
   }
+}
 
+.fav__list{
+  list-style: none;
+  padding: 0;
+}
+
+.hidden{
+  display: none;
+}
+
+.close__button{
+  height: 20px;
+  width: 20px;
+  font-size: 10px;
+  border-radius: 50%;
+  text-align: center;
+  box-sizing: border-box;
+  padding: 2px;
+}
+
+.fav__list-item{
+  height: 250px;
+  background-color: white;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 5px;
+}
+
+.fav__list-image{
+  height: 180px;
+}
+
+.show__list-title{
+  font-size: 16px;
 }
