Add keyboard input function

--- a/_src/templates/partials/_main.html
+++ b/_src/templates/partials/_main.html
@@ -1,6 +1,6 @@
 <main class="page__main">
 
-  <form class="form" action="get" method="get">
+  <form class="form" action="#" method="GET" >
   <label for="search"></label>
   <input id="search" type="text" class="main__input" placeholder="¡Busca tu serie!">
   <button type="button" class="main__button">Buscar</button>
