--- a/_src/assets/scss/main.scss
+++ b/_src/assets/scss/main.scss
@@ -34,7 +34,6 @@
     font-size:30px;
   }
 }
-// .main__button { }
 
 .form{
   display: flex;
@@ -113,4 +112,8 @@
 
 .show__list-title{
   font-size: 16px;
+}
+
+.hidden{
+  display: none;
 }
