--- a/_src/templates/partials/_main.html
+++ b/_src/templates/partials/_main.html
@@ -4,9 +4,11 @@
   <label for="search"></label>
   <input id="search" type="text" class="main__input" placeholder="¡Busca tu serie!">
   <button type="button" class="main__button">Buscar</button>
+  <button type="button" class="fav__button">Log</button>
   </form>
   <div class="main__container">
-    <div class="fav__container"></div>
+    <div class="fav__container">
+    </div>
     <div class="list__container"></div>
   </div>
 </main>
